--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,5 +15,18 @@
         android:layout_height="match_parent"
         android:id="@+id/main_context"
         android:orientation="vertical"
-        ></LinearLayout>
+        >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="9"
+            android:orientation="horizontal"
+            android:id="@+id/sound_board_select_list"></LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:id="@+id/sound_boards_container"></LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
