--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,17 +16,17 @@
         android:id="@+id/main_context"
         android:orientation="vertical"
         >
+        <!--android:layout_weight="9"-->
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="9"
+            android:layout_height="70dp"
             android:orientation="horizontal"
             android:id="@+id/sound_board_select_list"></LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:id="@+id/sound_boards_container"></LinearLayout>
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
